syntax = "proto3";
package dastchain.dex;

option go_package = "dastchain/x/dex/types";

message DenomTrace {
  string index = 1; 
  string port = 2; 
  string channel = 3; 
  string origin = 4; 
  
}

